--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h2>When?</h2>
-								<h3>The event will start late afternoon of August 9th, 2025, and go through the evening. </h3>
+								<h3>The event will start in the afternoon on August 9th, 2025, and go through the evening. </h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h2>Where?</h2>
-								<h3>We will be hosting the event at our friend Greg and Shelley’s place in Portland, OR. The festivities will be outside, weather permitting. The address is: <br />
+								<h3>We will be hosting the event at our friends Greg and Shelley’s place in Portland, OR. The festivities will be outside, weather permitting. The address is: The festivities will be outside, weather permitting. The address is: <br />
 									<strong>5911 SE 145th Ave, Portland, OR 97236</strong></h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
