--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h2>When?</h2>
-								<h3>The event will start in the afternoon on August 16th, 2025, and go through the evening. </h3>
+								<h3>The event will start at 5pm on August 16th, 2025, and end around 11pm :)  </h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -58,6 +58,7 @@
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h2>More details to come :)</h2>
 								<h3>In the meantime, please RSVP below!</h3>
+								<h3>The RSVP deadline is <b>May 20th</b>. </h3>
 							</article>
 						</div>
 						<ul class="actions">
