--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h2>More details to come :)</h2>
 								<h3>In the meantime, please RSVP below!</h3>
-								<h3>The RSVP deadline is <b>May 20th</b>. </h3>
+								<h3>The RSVP deadline is <strong>May 20th</strong>. </h3>
 							</article>
 						</div>
 						<ul class="actions">
