--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
 						</ul>
 					</section>
 
+				<!-- Three -->
+					<section id="three">
+						<header class="major">
+							<h2>Accommodations</h2>
+						</header>
+						We have reserved discounted rooms for our guests at two nearby hotels, The Courtyard Portland City Center and the Four Points Sheraton. There are  many other additional options in the area. <u> Please avoid using Airbnb, Expedia, Booking Holdings, and other companies on the <a href="https://bdsmovement.net/Guide-to-BDS-Boycott ">BDS list</a>. </u> 
+						<p>
+							<h2>Courtyard Portland City Center</h2>
+								<b> Address:</b> 550 SW Oak St, Portland, OR 97204  <br />
+								<b>	Discounted rate:</b> $139/night <br />
+								<b>	Distance:</b> 20–30 minute drive to venue, depending on traffic <br />
+								<b>	Description:</b> In the heart of Portland city proper, within walking distance from city staples including Powell’s city of books and Voodoo Donuts. We recommend this spot if you are eager to explore the city during your visit. <br />
+								<b>	How to reserve with discounted rate:</b> Call the hotel reservations department (1-888-236-2427) and identify yourself as part of the group “Aida and Austin Wedding Reception.”<br />
+						</p>
+						<p>
+
+							<h2>Four Points Sheraton, Portland East</h2>
+								<b> Address:</b> 1919 NE 181st Ave, Portland, OR 97230 <br />
+								<b>	Discounted rate:</b> $129–139/night <br />
+								<b>	Distance:</b> 20 minute drive to Venue <br />
+								<b>	Description:</b> Located in quieter East Portland. We recommend this spot if you are trying to keep your visit simple, and don’t want to be driving in and out of the city. <br />
+								<b>	How to reserve with discounted rate:</b> Follow <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1747247279309&key=GRP&guestreslink2=true&app=resvlink">this link</a> </u>  to book online. <br />
+						</p>
+					</section>
+					
+
 				<!-- Four -->
 				<!--
 					<section id="four">
