--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 								<b>	Discounted rate:</b> $139/night <br />
 								<b>	Distance:</b> 20–30 minute drive to venue, depending on traffic <br />
 								<b>	Description:</b> In the heart of Portland city proper, within walking distance from city staples including Powell’s city of books and Voodoo Donuts. We recommend this spot if you are eager to explore the city during your visit. <br />
-								<b>	How to reserve with discounted rate:</b> Call the hotel reservations department (1-888-236-2427) and identify yourself as part of the group “Aida and Austin Wedding Reception.”<br />
+								<b>	How to reserve with discounted rate:</b> Follow <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1747693200113&key=GRP&guestreslink2=true&app=resvlink">this link</a> </u>  to book online, or call the hotel reservations department (1-888-236-2427) and identify yourself as part of the group “Aida and Austin Wedding Reception.”<br />
+
+							https://www.marriott.com/event-reservations/reservation-link.mi?id=1747693200113&key=GRP&guestreslink2=true&app=resvlink
 						</p>
 						<p>
 
