--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 								<b>	Distance:</b> 20–30 minute drive to venue, depending on traffic <br />
 								<b>	Description:</b> In the heart of Portland city proper, within walking distance from city staples including Powell’s city of books and Voodoo Donuts. We recommend this spot if you are eager to explore the city during your visit. <br />
 								<b>	How to reserve with discounted rate:</b> Follow <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1747693200113&key=GRP&guestreslink2=true&app=resvlink">this link</a> </u>  to book online, or call the hotel reservations department (1-888-236-2427) and identify yourself as part of the group “Aida and Austin Wedding Reception.”<br />
+								<b>	Cutoff date for discounted rate:</b> July 16 <br />
 
-							https://www.marriott.com/event-reservations/reservation-link.mi?id=1747693200113&key=GRP&guestreslink2=true&app=resvlink
 						</p>
 						<p>
 
@@ -89,6 +89,7 @@
 								<b>	Distance:</b> 20 minute drive to Venue <br />
 								<b>	Description:</b> Located in quieter East Portland. We recommend this spot if you are trying to keep your visit simple, and don’t want to be driving in and out of the city. <br />
 								<b>	How to reserve with discounted rate:</b> Follow <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1747247279309&key=GRP&guestreslink2=true&app=resvlink">this link</a> </u>  to book online. <br />
+								<b>	Cutoff date for discounted rate:</b> July 15 <br />
 						</p>
 					</section>
 					
