--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h2>More details to come :)</h2>
-								<h3>In the meantime, please RSVP below! The RSVP deadline is <strong>May 20th</strong>. </h3>
+								<h2>What to wear?</h2>
+								<h3>The event is Semi-Formal / Garden Party Attire. The venue is outdoors with a lawn and deck, so we recommend shoes on the more practical side (heels may be difficult).  </h3>
 							</article>
 						</div>
 						<ul class="actions">
@@ -67,6 +67,14 @@
 
 				<!-- Three -->
 					<section id="three">
+						<header class="major">
+							<h2>Parking</h2>
+						</header>
+						There is plenty of street parking along the venue (SE 145th Ave) and the cross street (SE Knight St). 
+					</section>
+
+				<!-- Four -->
+					<section id="four">
 						<header class="major">
 							<h2>Accommodations</h2>
 						</header>
@@ -425,3 +433,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
