--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h2>What?</h2>
-								<h3>The main event will include drinks, buffet-style dinner, music, dancing, and celebrating with family & friends. We may hold a brief ceremony, but we will already have completed a courthouse wedding by this date. This day will be for celebrating :) </h3>
+								<h3>The main event will include drinks, buffet-style dinner, music, dancing, and celebrating with family & friends. We have completed a courthouse wedding — this day will be for celebrating :) </h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -433,4 +433,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
