--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h2>What to wear?</h2>
-								<h3>The event is Semi-Formal / Garden Party Attire. The venue is outdoors with a lawn and deck, so we recommend shoes on the more practical side (heels may be difficult).  </h3>
+								<h3>The event is Semi-Formal / Garden Party Attire. The venue is outdoors with a lawn and deck, so we recommend shoes on the more practical side (pointy heels may be difficult).  </h3>
 							</article>
 						</div>
 						<ul class="actions">
@@ -70,7 +70,7 @@
 						<header class="major">
 							<h2>Parking</h2>
 						</header>
-						There is plenty of street parking along the venue (SE 145th Ave) and the cross street (SE Knight St). 
+						There is plenty of street parking along the venue's street (SE 145th Ave) and the cross street (SE Knight St). 
 					</section>
 
 				<!-- Four -->
@@ -433,5 +433,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
